<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#E8F5E9"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_location_pin" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:gravity="center"
        android:text="@string/location_dialog_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:text="@string/location_dialog_message"
        android:textColor="@color/more_light_grey"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnDenyLocation"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/pill_outline_green_bg"
                android:gravity="center"
            android:text="@string/location_dialog_not_now"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/btnAllowLocation"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/tab_pill_active_bg"
                android:gravity="center"
            android:text="@string/location_dialog_allow"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
