<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <include
            android:id="@+id/toplayout"
            layout="@layout/top_bar_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_20sdp">

                <!-- General disclaimer -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_22sdp"
                                android:layout_height="@dimen/_22sdp"
                                android:src="@android:drawable/ic_dialog_alert"
                                app:tint="@android:color/holo_green_dark" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_8sdp"
                                android:fontFamily="@font/nastaleeq_regular"
                                android:text="@string/disclaimer_section_title"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_16ssp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:lineSpacingExtra="@dimen/_4sdp"
                            android:text="@string/contact_us_mesage"
                            android:textColor="@color/more_light_grey"
                            android:textSize="@dimen/_13ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Quran content source disclaimer -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    app:cardBackgroundColor="#FFF8E1"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_24sdp"
                                android:layout_height="@dimen/_24sdp"
                                android:src="@drawable/ic_baseline_menu_book_24"
                                app:tint="#F9A825" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_8sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/nastaleeq_regular"
                                android:text="@string/quran_disclaimer_title"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_15ssp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/nastaleeq_regular"
                            android:lineSpacingExtra="@dimen/_5sdp"
                            android:text="@string/quran_disclaimer_message"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Contact email -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:src="@android:drawable/ic_dialog_email"
                            app:tint="@android:color/holo_green_dark" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nastaleeq_regular"
                                android:text="@string/contact_email_label"
                                android:textColor="@color/more_light_grey"
                                android:textSize="@dimen/_12ssp" />

                            <TextView
                                android:id="@+id/tvEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="email"
                                android:text="engineer.habib26@gmail.com"
                                android:textColor="@android:color/holo_green_dark"
                                android:textSize="@dimen/_14ssp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Build an app CTA -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    app:cardBackgroundColor="#E8F5E9"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_22sdp"
                                android:layout_height="@dimen/_22sdp"
                                android:src="@drawable/ic_code_brackets" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_8sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/nastaleeq_regular"
                                android:text="@string/build_app_title"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_15ssp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/nastaleeq_regular"
                            android:lineSpacingExtra="@dimen/_5sdp"
                            android:text="@string/build_app_message"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp" />

                        <Button
                            android:id="@+id/btnEmailUs"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_marginTop="@dimen/_14sdp"
                            android:background="@drawable/tab_pill_active_bg"
                            android:fontFamily="@font/nastaleeq_regular"
                            android:gravity="center"
                            android:paddingStart="@dimen/_20sdp"
                            android:paddingEnd="@dimen/_20sdp"
                            android:text="@string/btn_email_us"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
